@@ -1,0 +1,432 @@
+/* ===========================================================
+ * JFreeChart : a free chart library for the Java(tm) platform
+ * ===========================================================
+ *
+ * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
+ *
+ * Project Info:  http://www.jfree.org/jfreechart/index.html
+ *
+ * This library is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2.1 of the License, or
+ * (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
+ * License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
+ * USA.
+ *
+ * [Java is a trademark or registered trademark of Sun Microsystems, Inc.
+ * in the United States and other countries.]
+ *
+ * ---------------------------
+ * SamplingXYLineRenderer.java
+ * ---------------------------
+ * (C) Copyright 2008, 2009, by Object Refinery Limited.
+ *
+ * Original Author:  David Gilbert (for Object Refinery Limited);
+ * Contributor(s):   -;
+ *
+ * Changes:
+ * --------
+ * 02-Oct-2008 : Version 1 (DG);
+ *
+ */
+
+package org.jfree.chart.renderer.xy;
+
+import java.awt.Graphics2D;
+import java.awt.Paint;
+import java.awt.Shape;
+import java.awt.geom.GeneralPath;
+import java.awt.geom.Line2D;
+import java.awt.geom.PathIterator;
+import java.awt.geom.Rectangle2D;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.io.Serializable;
+
+import org.jfree.chart.LegendItem;
+import org.jfree.chart.axis.ValueAxis;
+import org.jfree.chart.event.RendererChangeEvent;
+import org.jfree.chart.plot.CrosshairState;
+import org.jfree.chart.plot.PlotOrientation;
+import org.jfree.chart.plot.PlotRenderingInfo;
+import org.jfree.chart.plot.XYPlot;
+import org.jfree.data.xy.XYDataset;
+import org.jfree.io.SerialUtilities;
+import org.jfree.ui.RectangleEdge;
+import org.jfree.util.PublicCloneable;
+import org.jfree.util.ShapeUtilities;
+
+/**
+ * A renderer that...  This renderer is designed for use with the {@link XYPlot}
+ * class.
+ */
+public class SamplingXYLineRenderer extends AbstractXYItemRenderer
+        implements XYItemRenderer, Cloneable, PublicCloneable, Serializable {
+
+    /** The shape that is used to represent a line in the legend. */
+    private transient Shape legendLine;
+
+    /**
+     * Creates a new renderer.
+     */
+    public SamplingXYLineRenderer() {
+        this.legendLine = new Line2D.Double(-7.0, 0.0, 7.0, 0.0);
+    }
+
+    /**
+     * Returns the shape used to represent a line in the legend.
+     *
+     * @return The legend line (never <code>null</code>).
+     *
+     * @see #setLegendLine(Shape)
+     */
+    public Shape getLegendLine() {
+        return this.legendLine;
+    }
+
+    /**
+     * Sets the shape used as a line in each legend item and sends a
+     * {@link RendererChangeEvent} to all registered listeners.
+     *
+     * @param line  the line (<code>null</code> not permitted).
+     *
+     * @see #getLegendLine()
+     */
+    public void setLegendLine(Shape line) {
+        if (line == null) {
+            throw new IllegalArgumentException("Null 'line' argument.");
+        }
+        this.legendLine = line;
+        fireChangeEvent();
+    }
+
+    /**
+     * Returns the number of passes through the data that the renderer requires
+     * in order to draw the chart.  Most charts will require a single pass, but
+     * some require two passes.
+     *
+     * @return The pass count.
+     */
+    public int getPassCount() {
+        return 1;
+    }
+
+    /**
+     * Records the state for the renderer.  This is used to preserve state
+     * information between calls to the drawItem() method for a single chart
+     * drawing.
+     */
+    public static class State extends XYItemRendererState {
+
+        /** The path for the current series. */
+        GeneralPath seriesPath;
+
+        /**
+         * A second path that draws vertical intervals to cover any extreme
+         * values.
+         */
+        GeneralPath intervalPath;
+
+        /**
+         * The minimum change in the x-value needed to trigger an update to
+         * the seriesPath.
+         */
+        double dX = 1.0;
+
+        /** The last x-coordinate visited by the seriesPath. */
+        double lastX;
+
+        /** The initial y-coordinate for the current x-coordinate. */
+        double openY = 0.0;
+
+        /** The highest y-coordinate for the current x-coordinate. */
+        double highY = 0.0;
+
+        /** The lowest y-coordinate for the current x-coordinate. */
+        double lowY = 0.0;
+
+        /** The final y-coordinate for the current x-coordinate. */
+        double closeY = 0.0;
+
+        /**
+         * A flag that indicates if the last (x, y) point was 'good'
+         * (non-null).
+         */
+        boolean lastPointGood;
+
+        /**
+         * Creates a new state instance.
+         *
+         * @param info  the plot rendering info.
+         */
+        public State(PlotRenderingInfo info) {
+            super(info);
+        }
+
+        /**
+         * This method is called by the {@link XYPlot} at the start of each
+         * series pass.  We reset the state for the current series.
+         *
+         * @param dataset  the dataset.
+         * @param series  the series index.
+         * @param firstItem  the first item index for this pass.
+         * @param lastItem  the last item index for this pass.
+         * @param pass  the current pass index.
+         * @param passCount  the number of passes.
+         */
+        public void startSeriesPass(XYDataset dataset, int series,
+                int firstItem, int lastItem, int pass, int passCount) {
+            this.seriesPath.reset();
+            this.lastPointGood = false;
+            super.startSeriesPass(dataset, series, firstItem, lastItem, pass,
+                    passCount);
+        }
+
+    }
+
+    /**
+     * Initialises the renderer.
+     * <P>
+     * This method will be called before the first item is rendered, giving the
+     * renderer an opportunity to initialise any state information it wants to
+     * maintain.  The renderer can do nothing if it chooses.
+     *
+     * @param g2  the graphics device.
+     * @param dataArea  the area inside the axes.
+     * @param plot  the plot.
+     * @param data  the data.
+     * @param info  an optional info collection object to return data back to
+     *              the caller.
+     *
+     * @return The renderer state.
+     */
+    public XYItemRendererState initialise(Graphics2D g2,
+            Rectangle2D dataArea, XYPlot plot, XYDataset data,
+            PlotRenderingInfo info) {
+
+        double dpi = 72;
+    //        Integer dpiVal = (Integer) g2.getRenderingHint(HintKey.DPI);
+    //        if (dpiVal != null) {
+    //            dpi = dpiVal.intValue();
+    //        }
+        State state = new State(info);
+        state.seriesPath = new GeneralPath();
+        state.intervalPath = new GeneralPath();
+        state.dX = 72.0 / dpi;
+        return state;
+    }
+
+    /**
+     * Draws the visual representation of a single data item.
+     *
+     * @param g2  the graphics device.
+     * @param state  the renderer state.
+     * @param dataArea  the area within which the data is being drawn.
+     * @param info  collects information about the drawing.
+     * @param plot  the plot (can be used to obtain standard color
+     *              information etc).
+     * @param domainAxis  the domain axis.
+     * @param rangeAxis  the range axis.
+     * @param dataset  the dataset.
+     * @param series  the series index (zero-based).
+     * @param item  the item index (zero-based).
+     * @param crosshairState  crosshair information for the plot
+     *                        (<code>null</code> permitted).
+     * @param pass  the pass index.
+     */
+    public void drawItem(Graphics2D g2,
+                         XYItemRendererState state,
+                         Rectangle2D dataArea,
+                         PlotRenderingInfo info,
+                         XYPlot plot,
+                         ValueAxis domainAxis,
+                         ValueAxis rangeAxis,
+                         XYDataset dataset,
+                         int series,
+                         int item,
+                         CrosshairState crosshairState,
+                         int pass) {
+
+        // do nothing if item is not visible
+        if (!getItemVisible(series, item)) {
+            return;
+        }
+        RectangleEdge xAxisLocation = plot.getDomainAxisEdge();
+        RectangleEdge yAxisLocation = plot.getRangeAxisEdge();
+
+        // get the data point...
+        double x1 = dataset.getXValue(series, item);
+        double y1 = dataset.getYValue(series, item);
+        double transX1 = domainAxis.valueToJava2D(x1, dataArea, xAxisLocation);
+        double transY1 = rangeAxis.valueToJava2D(y1, dataArea, yAxisLocation);
+
+        State s = (State) state;
+        // update path to reflect latest point
+        if (!Double.isNaN(transX1) && !Double.isNaN(transY1)) {
+            float x = (float) transX1;
+            float y = (float) transY1;
+            PlotOrientation orientation = plot.getOrientation();
+            if (orientation == PlotOrientation.HORIZONTAL) {
+                x = (float) transY1;
+                y = (float) transX1;
+            }
+            if (s.lastPointGood) {
+                if ((Math.abs(x - s.lastX) > s.dX)) {
+                    s.seriesPath.lineTo(x, y);
+                    if (s.lowY < s.highY) {
+                        s.intervalPath.moveTo(s.lastX, s.lowY);
+                        s.intervalPath.lineTo(s.lastX, s.highY);
+                    }
+                    s.lastX = x;
+                    s.openY = y;
+                    s.highY = y;
+                    s.lowY = y;
+                    s.closeY = y;
+                }
+                else {
+                    s.highY = Math.max(s.highY, y);
+                    s.lowY = Math.min(s.lowY, y);
+                    s.closeY = y;
+                }
+            }
+            else {
+                s.seriesPath.moveTo(x, y);
+                s.lastX = x;
+                s.openY = y;
+                s.highY = y;
+                s.lowY = y;
+                s.closeY = y;
+            }
+            s.lastPointGood = true;
+        }
+        else {
+            s.lastPointGood = false;
+        }
+        // if this is the last item, draw the path ...
+        if (item == s.getLastItemIndex()) {
+            // draw path
+            PathIterator pi = s.seriesPath.getPathIterator(null);
+            int count = 0;
+            while (!pi.isDone()) {
+                count++;
+                pi.next();
+            }
+            g2.setStroke(getItemStroke(series, item));
+            g2.setPaint(getItemPaint(series, item));
+            g2.draw(s.seriesPath);
+            g2.draw(s.intervalPath);
+        }
+    }
+
+    /**
+     * Returns a legend item for the specified series.
+     *
+     * @param datasetIndex  the dataset index (zero-based).
+     * @param series  the series index (zero-based).
+     *
+     * @return A legend item for the series.
+     */
+    public LegendItem getLegendItem(int datasetIndex, int series) {
+
+        XYPlot plot = getPlot();
+        if (plot == null) {
+            return null;
+        }
+
+        LegendItem result = null;
+        XYDataset dataset = plot.getDataset(datasetIndex);
+        if (dataset != null) {
+            if (getItemVisible(series, 0)) {
+                String label = getLegendItemLabelGenerator().generateLabel(
+                        dataset, series);
+                result = new LegendItem(label);
+                result.setLabelFont(lookupLegendTextFont(series));
+                Paint labelPaint = lookupLegendTextPaint(series);
+                if (labelPaint != null) {
+                    result.setLabelPaint(labelPaint);
+                }
+                result.setSeriesKey(dataset.getSeriesKey(series));
+                result.setSeriesIndex(series);
+                result.setDataset(dataset);
+                result.setDatasetIndex(datasetIndex);
+            }
+        }
+        return result;
+
+    }
+
+    /**
+     * Returns a clone of the renderer.
+     *
+     * @return A clone.
+     *
+     * @throws CloneNotSupportedException if the clone cannot be created.
+     */
+    public Object clone() throws CloneNotSupportedException {
+        SamplingXYLineRenderer clone = (SamplingXYLineRenderer) super.clone();
+        if (this.legendLine != null) {
+            clone.legendLine = ShapeUtilities.clone(this.legendLine);
+        }
+        return clone;
+    }
+
+    /**
+     * Tests this renderer for equality with an arbitrary object.
+     *
+     * @param obj  the object (<code>null</code> permitted).
+     *
+     * @return <code>true</code> or <code>false</code>.
+     */
+    public boolean equals(Object obj) {
+        if (obj == this) {
+            return true;
+        }
+        if (!(obj instanceof SamplingXYLineRenderer)) {
+            return false;
+        }
+        if (!super.equals(obj)) {
+            return false;
+        }
+        SamplingXYLineRenderer that = (SamplingXYLineRenderer) obj;
+        if (!ShapeUtilities.equal(this.legendLine, that.legendLine)) {
+            return false;
+        }
+        return true;
+    }
+
+    /**
+     * Provides serialization support.
+     *
+     * @param stream  the input stream.
+     *
+     * @throws IOException  if there is an I/O error.
+     * @throws ClassNotFoundException  if there is a classpath problem.
+     */
+    private void readObject(ObjectInputStream stream)
+            throws IOException, ClassNotFoundException {
+        stream.defaultReadObject();
+        this.legendLine = SerialUtilities.readShape(stream);
+    }
+
+    /**
+     * Provides serialization support.
+     *
+     * @param stream  the output stream.
+     *
+     * @throws IOException  if there is an I/O error.
+     */
+    private void writeObject(ObjectOutputStream stream) throws IOException {
+        stream.defaultWriteObject();
+        SerialUtilities.writeShape(this.legendLine, stream);
+    }
+
+}
